fix for links reaching over the side of the site on mobile devices

--- a/static/css/tumblr.css
+++ b/static/css/tumblr.css
@@ -78,3 +78,7 @@
   margin: 0px auto;
   display: block;
   }
+
+#log .inner {
+    word-wrap: break-word;
+}
